force-app/main/default/objects/bofc__BOFCReportResults__c/fields/bofc__Check__c.field-meta.xml
<CustomField>
    <fullName>bofc__Check__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Check</label>
    <type>Checkbox</type>
</CustomField>