force-app/main/default/objects/bofc__BOFCReportResults__c/fields/bofc__RAPIName__c.field-meta.xml
<CustomField>
    <fullName>bofc__RAPIName__c</fullName>
    <label>RAPIName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>