force-app/main/default/objects/bofc__BOFCReportResults__c/fields/bofc__RID__c.field-meta.xml
<CustomField>
    <fullName>bofc__RID__c</fullName>
    <label>RID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>