force-app/main/default/objects/bofc__BOFCReportResults__c/fields/bofc__RName__c.field-meta.xml
<CustomField>
    <fullName>bofc__RName__c</fullName>
    <label>RName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>